--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 # -----------------------------------------------------------------------------
 .godot/
 # 编辑器配置、导入资源缓存、临时文件
-
+assets/
 # -----------------------------------------------------------------------------
 # 导入的资源文件（.import）
 # -----------------------------------------------------------------------------
